Implement render function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Book Shop</title>
 </head>
 
-<body>
+<body onload="onInit()">
     <table>
         <tr class="header">
             <td class="col1">Title</td>
@@ -42,6 +42,9 @@
             </td>
         </tr>
     </table>
+
+    <script src="js/book.service.js"></script>
+    <script src="js/book.controller.js"></script>
 
 </body>
 </html>
