--- a/index.html
+++ b/index.html
@@ -8,40 +8,7 @@
 </head>
 
 <body onload="onInit()">
-    <table>
-        <tr class="header">
-            <td class="col1">Title</td>
-            <td class="col2">Price</td>
-            <td class="col3">Actions</td>
-        </tr>
-        <tr>
-            <td class="col1">The Adventures of Lori Ipsi</td>
-            <td class="col2">120</td>
-            <td class="btns">
-                <button class="read">Read</button>
-                <button class="update">Update</button>
-                <button class="delete">Delete</button>
-            </td>
-        </tr>
-        <tr>
-            <td class="col1">World Atlas</td>
-            <td class="col2">300</td>
-            <td class="btns">
-                <button class="read">Read</button>
-                <button class="update">Update</button>
-                <button class="delete">Delete</button>
-            </td>
-        </tr>
-        <tr>
-            <td class="col1">Zorba the Greek</td>
-            <td class="col2">87</td>
-            <td class="btns">
-                <button class="read">Read</button>
-                <button class="update">Update</button>
-                <button class="delete">Delete</button>
-            </td>
-        </tr>
-    </table>
+    <table></table>
 
     <script src="js/book.service.js"></script>
     <script src="js/book.controller.js"></script>
