--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 
 <body onload="onInit()">
-    <table></table>
 
+    <table></table>
+    <button class="add" onclick="onAddBook()">Add Book</button>
+
+    <script src="js/book.util.service.js"></script>
     <script src="js/book.service.js"></script>
     <script src="js/book.controller.js"></script>
 
