--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <table></table>
     <button class="add" onclick="onAddBook()">Add Book</button>
 
+    <dialog class="book-details">
+        <form method="dialog">
+            <button>x</button>
+            <h2>Book: <span></span></h2>
+            <pre></pre>
+        </form>
+    </dialog>
+
+
     <script src="js/book.util.service.js"></script>
     <script src="js/book.service.js"></script>
     <script src="js/book.controller.js"></script>
