Add book cover to book details modal

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button>x</button>
             <h2>Book: <span></span></h2>
             <pre></pre>
+            <span class="img"></span>
         </form>
     </dialog>
 
