--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
     <script src="js/book.util.service.js"></script>
+    <script src="js/book.storage.service.js"></script>
     <script src="js/book.service.js"></script>
     <script src="js/book.controller.js"></script>
 
