Add clear search btn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <form class="search">
         <input type="text" placeholder="Search by book title">
         <button>Search</button>
-        <button>Clear</button>
+        <button onclick="onClear()">Clear</button>
     </form>
     
     <button class="add" onclick="onAddBook()">Add Book</button>
