Add search book by title function

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </section> -->
 
     <form class="search">
-        <input type="text" placeholder="Search by book title">
-        <button>Search</button>
+        <input oninput="onSearch(event)" type="text" placeholder="Search by book title">
         <button onclick="onClear()">Clear</button>
     </form>
     
