Footer and body layout

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
   
     <h3 class="pop-up hidden"></h3>
+
+    <footer>
+        <h4>Expensive books: <span class="expensive"></span></h4>
+        <h4>Average price: <span class="average"></span></h4>
+        <h4>Cheap books:<span class="cheap"></span></h4>
+    </footer>
    
 
     <script src="js/book.util.service.js"></script>
