--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="onInit()">
 
     <form class="search">
-        <input oninput="onSearch(event)" type="text" placeholder="Search by book title">
+        <input oninput="onSearch(event)" type="search" placeholder="Search by book title">
         <button onclick="onClear()">Clear</button>
     </form>
     
