--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <h3 class="pop-up hidden"></h3>
 
     <footer>
-        <h4>Expensive books: <span class="expensive"></span></h4>
-        <h4>Average price: <span class="average"></span></h4>
-        <h4>Cheap books:<span class="cheap"></span></h4>
+        <span>Expensive books: <span class="expensive"></span></span>
+        <span>Average price: <span class="average"></span></span>
+        <span>Cheap books:<span class="cheap"></span></span>
     </footer>
    
 
