--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <dialog class="book-edit-modal">
         <form onsubmit="onSaveBook()" method="dialog">
             <h2>Add a Book</h2>
-            <img src="" alt="">
             <!-- <select class="vendor-list" onchange="onSelectVendor(this)">
                 <option value="">Choose vendor...</option>
             </select> -->
             <input class="book-title" type="text" placeholder="Enter book title">
             <input class="book-price" type="number" placeholder="Enter book price">
+            <img src="img/book-cover.png" alt="">
             <div class="actions">
                 <button type="button" onclick="onCloseBookEdit()">Cancel</button>
                 <button>Save</button>
