Add update to the car-edit modal

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <dialog class="book-edit-modal">
         <form onsubmit="onSaveBook()" method="dialog">
             <h2>Add a Book</h2>
-            <select class="book-list" onchange="onSelectTitle(this)">
+            <!-- <select class="book-list" onchange="onSelectTitle(this)"> -->
+            <select class="book-list">
                 <option value="">Choose book...</option>
             </select>
             <input class="book-title" type="text" placeholder="Enter book title">
