Add rate to the table

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <tr class="header">
                 <td class="col1">Title</td>
                 <td class="col2">Price</td>
-                <td class="col3">Actions</td></tr>
+                <td class="col3">Rate</td>
+                <td class="col4">Actions</td></tr>
         </thead>
         <tbody></tbody>
     </table>
