Add sort by table header column clicking

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <table>
         <thead>
             <tr class="header">
-                <td class="col1">Title</td>
-                <td class="col2" onclick="onSortByPrice()">Price</td>
-                <td class="col3">Rate</td>
+                <td class="col1" onclick="onSortByTitle()">Title <span></span></td>
+                <td class="col2" onclick="onSortByPrice()">Price <span></span></td>
+                <td class="col3" onclick="onSortByRate()">Rate <span></span></td>
                 <td class="col4">Actions</td></tr>
         </thead>
         <tbody></tbody>
