Adding btn to read details

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <h2>Book: <span></span></h2>
             <pre></pre>
             <span class="img"></span>
+            <button>Edit book details</button>
         </form>
     </dialog>
 
