Add option of updating title to update book

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <dialog class="book-edit-modal">
         <form onsubmit="onSaveBook()" method="dialog">
             <h2>Add a Book</h2>
-            <input class="book-title" type="text" placeholder="Enter book title">
+            <input id="" class="book-title" type="text" placeholder="Enter book title">
             <input class="book-price" type="number" placeholder="Enter book price">
             <label>
                 <span>Rating:</span>
