Navigate from read book to update details

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     
     <dialog class="book-details">
         <form method="dialog">
-            <button>x</button>
+            <button class="close-btn">x</button>
             <h2>Book: <span></span></h2>
             <pre></pre>
             <span class="img"></span>
-            <button>Edit book details</button>
+            <button id="" class="update-details" onclick="onUpdateBook(this.id)">Edit book details</button>
         </form>
     </dialog>
 
