Add onNextPage event handler

--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
         </form>
     </dialog>
 
-    <button class="add" onclick="onAddBook()">Add Book</button>
+    <!-- <button class="add" onclick="onAddBook()">Add Book</button> -->
+
+    <section>
+        <div class="actions">
+            <button class="add" onclick="onAddBook()">Add Book</button>
+            <button title="Next Page" onclick="onNextPage()">Next Page</button>
+        </div>
+        <section class="books-container"></section>
+    </section>
     
     <table>
         <thead>
