Add pagination and layout

--- a/index.html
+++ b/index.html
@@ -59,14 +59,12 @@
                 <input type="number" min="1" max="10" value="10"  >
             </label>
             <img src="img/book-cover.png" alt="">
-            <div class="actions">
+            <div>
                 <button type="button" onclick="onCloseBookEdit()">Cancel</button>
                 <button>Save</button>
             </div>
         </form>
     </dialog>
-
-    <!-- <button class="add" onclick="onAddBook()">Add Book</button> -->
 
     <section>
         <div class="actions">
@@ -75,7 +73,7 @@
         </div>
         <section class="books-container"></section>
     </section>
-    
+
     <table>
         <thead>
             <tr class="header">
@@ -86,6 +84,8 @@
         </thead>
         <tbody></tbody>
     </table>
+
+   
     
     <dialog class="book-details">
         <form method="dialog">
