Add previous page btn and layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <section>
         <div class="actions">
             <button class="add" onclick="onAddBook()">Add Book</button>
+            <div class="pages">
+                <button title="Previous Page" onclick="onPreviousPage()">Previous Page</button>
             <button title="Next Page" onclick="onNextPage()">Next Page</button>
+            </div>    
         </div>
         <section class="books-container"></section>
     </section>
