Fix jumping of the table

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="actions">
             <button class="add" onclick="onAddBook()">Add Book</button>
             <div class="pages">
-                <button title="Previous Page" onclick="onPreviousPage()">Previous Page</button>
-            <button title="Next Page" onclick="onNextPage()">Next Page</button>
+                <button title="Previous Page" onclick="onPreviousPage()">◀️</button>
+                <button title="Next Page" onclick="onNextPage()">▶️</button>
             </div>    
         </div>
         <section class="books-container"></section>
